Collapsing menu repair

--- a/wwwroot/css/bootstrap.css
+++ b/wwwroot/css/bootstrap.css
@@ -563,8 +563,9 @@ a.bg-danger:hover {
   background-color: #e4b9b9;
 }
 .page-header {
-  padding-bottom: 70px;
-  padding-top: 70px;
+  padding-bottom: 200px;
+  padding-top: 30px;
+  padding-left: 20px;
   margin: 0px;
   background: url("../images/cover.jpg") no-repeat top center;
 }
